--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,9 @@ main{
     
 }
 
+
+
+
 .check label{
     font-family: sans-serif;
     color: rgb(131, 103, 71);
@@ -114,6 +117,20 @@ main{
 }
 
 
+.form_col #fin{
+    text-transform: uppercase;
+}
+
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
 
 
 
