--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ main{
 
 }
 
+
 .form_col{
     display: flex;
     flex-direction: column;
@@ -105,17 +106,31 @@ main{
 }
 
 .form_col .submit{
-    background:#FF0000;
+    background:#19a619;
     border-radius: 10px;
-    border: none;
+    border: 2px solid #19a619;
     font-size: 20px;
     font-family: sans-serif;
     font-weight: 200;
     color:#fff;
-    padding: 17px;
-
+    padding: 15px;
+    transition: background-color 200ms;
 }
 
+.star{
+    color: red;
+}
+
+.not_p{
+    font-size: 14px;
+    text-align: center;
+    color:rgb(205,175,140);
+}
+
+.form_col .submit:hover{
+    background-color: #fff;
+    color: #19a619;
+}
 
 .form_col #fin{
     text-transform: uppercase;
